# genZ-Panel

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  dev.sh  docker-compose.override.yml.backup  docker-compose.prod.yml  docker-compose.yml  install.sh  prod.sh  update.sh
crates/cli/: Cargo.toml
crates/core-api/: Cargo.toml  Dockerfile  Dockerfile.dev
crates/core-api/migrations/: 001_init.sql  002_create_domains.sql
crates/core-api/src/: config.rs  error.rs  events.rs  extractors.rs  handlers.rs  main.rs  middleware.rs  models.rs  openapi.rs  services.rs  state.rs
crates/core-api/src/middleware/: auth.rs
crates/core-api/src/services/: auth.rs  domain.rs
crates/dns-daemon/: Cargo.toml
crates/dns-daemon/src/: main.rs  pdns_client.rs
crates/proxy-manager/: Cargo.toml
crates/runtime-node/: Cargo.toml
crates/runtime-php/: Cargo.toml
crates/runtime-python/: Cargo.toml
helper-scripts/: backup.sh  restore.sh
scripts/: nats-subscriber.rs
