[package]
name = "genZ-panel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/core-api",
    "crates/runtime-core",
    "crates/runtime-php",
    "crates/runtime-node",
    "crates/runtime-python",
    "crates/builder",
    "crates/proxy-manager",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Panel Hosting Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }
hyper = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Docker API
bollard = "0.16"

# Message queue
async-nats = "0.33"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
password-hash = "0.5"

# Async trait
async-trait = "0.1"

# Template engine
minijinja = { version = "1.0", features = ["loader"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# File operations
tokio-stream = "0.1"
walkdir = "2.4"
tempfile = "3.10"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "tar"] }