[workspace]
members = [
    "crates/core-api",
    "crates/runtime-core",
    "crates/runtime-php",
    "crates/runtime-node",
    "crates/runtime-python",
    "crates/builder",
    "crates/proxy-manager",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
bollard = "0.16"
async-nats = "0.33"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.2"
argon2 = "0.5"
async-trait = "0.1"

[workspace.metadata]
default-run = "core-api"
