[package]
name = "core-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
validator.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
bollard.workspace = true
async-nats.workspace = true
figment.workspace = true
